@@ -11,6 +11,7 @@
    datacenters (CASSANDRA-3152)
  * Improve caching of same-version Messages on digest and repair paths
    (CASSANDRA-3158)
+ * Randomize choice of first replica for counter increment (CASSANDRA-2890)
 
 
 0.8.5
